external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/wrong_completion_before_dot_call@ide.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W09009]: unused struct field
  ┌─ tests/move_2024/ide_mode/wrong_completion_before_dot_call.move:5:9
  │
5 │         some_field: u64,
  │         ^^^^^^^^^^ The 'some_field' field of the 'SomeStruct' type is unused
  │
  = This warning can be suppressed with '#[allow(unused_field)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03010]: unbound field
   ┌─ tests/move_2024/ide_mode/wrong_completion_before_dot_call.move:16:9
   │  
16 │ ╭         some_struct.
17 │ │         some_struct.bar()
   │ ╰───────────────────^ Unbound field 'some_struct' in 'a::m::SomeStruct'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/wrong_completion_before_dot_call.move:16:20
   │
16 │         some_struct.
   │                    ^ Possible dot names: 'a::m::bar', 'a::m::foo', or 'some_field'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/wrong_completion_before_dot_call.move:17:9
   │
17 │         some_struct.bar()
   │         ^^^^^^^^^^^ Possible dot names: 'a::m::bar', 'a::m::foo', or 'some_field'
